update directories for Nemo

--- a/post_proc.ipynb
+++ b/post_proc.ipynb
@@ -32,6 +32,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "analysis = 'UL'\n",
+    "#analysis = 'Det'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +60,7 @@
    "source": [
     "ephem = 'BayesEphem'\n",
     "\n",
-    "chaindir = '/home/pbaker/nanograv/bwm/{}/'.format(ephem)\n",
+    "chaindir = '/home/pbaker/nanograv/bwm/{}/{}/'.format(analysis, ephem)\n",
     "chain_raw = np.loadtxt(chaindir + 'chain_1.txt')\n",
     "    \n",
     "burn = int(0.1 * len(chain_raw))\n",
@@ -85,7 +97,7 @@
     "ephems = ['DE421', 'DE430', 'DE435', 'DE436']\n",
     "\n",
     "for eph in ephems:\n",
-    "    chaindir = '/home/pbaker/nanograv/bwm/{}/'.format(eph)\n",
+    "    chaindir = '/home/pbaker/nanograv/bwm/{}/{}/'.format(analysis, eph)\n",
     "    chain_raw = np.loadtxt(chaindir + 'chain_1.txt')\n",
     "    \n",
     "    burn = int(0.1 * len(chain_raw))\n",
@@ -193,6 +205,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
