use MJD, compute ULs

--- a/post_proc.ipynb
+++ b/post_proc.ipynb
@@ -15,6 +15,7 @@
     "\n",
     "from corner import corner\n",
     "from acor import acor\n",
+    "from UL_uncert import UL_uncert\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -27,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "params = [r'$\\cos\\theta$', r'$\\phi$', r'$\\psi$', r'$\\log_{10} h$', r'$t_0$ (yr)']\n",
+    "params = [r'$\\cos\\theta$', r'$\\phi$', r'$\\psi$', r'$\\log_{10} h$', r'$t_0$ (MJD)']\n",
     "ch_dict = {}"
    ]
   },
@@ -53,9 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ephem = 'BayesEphem'\n",
@@ -67,9 +66,10 @@
     "chain = chain_raw[burn:]\n",
     "chain_bwm = chain[:,-20:-15]  # with BayesEphem\n",
     "\n",
-    "# convert MJD to data year\n",
-    "chain_bwm[:,-1] -= chain_bwm[:,-1].min()\n",
-    "chain_bwm[:,-1] /= 365.25\n",
+    "# de-log x-axis for ULs\n",
+    "if analysis == 'UL':\n",
+    "    chain_bwm[:,-2] = 10**chain_bwm[:,-2]\n",
+    "    params[-2] = r'$h$'\n",
     "\n",
     "corr = acor(chain_bwm[:,3])[0]\n",
     "N = len(chain_bwm)\n",
@@ -89,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ephems = ['DE421', 'DE430', 'DE435', 'DE436']\n",
@@ -104,9 +102,10 @@
     "    chain = chain_raw[burn:]    \n",
     "    chain_bwm = chain[:,-9:-4]  # no ephem model\n",
     "\n",
-    "    # convert MJD to data year\n",
-    "    chain_bwm[:,-1] -= chain_bwm[:,-1].min()\n",
-    "    chain_bwm[:,-1] /= 365.25\n",
+    "    # de-log x-axis for ULs\n",
+    "    if analysis == 'UL':\n",
+    "        chain_bwm[:,-2] = 10**chain_bwm[:,-2]\n",
+    "        params[-2] = r'$h$'\n",
     "    \n",
     "    corr = acor(chain_bwm[:,3])[0]\n",
     "    N = len(chain_bwm)\n",
@@ -127,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "corner_kwargs = {'bins':30,\n",
@@ -138,17 +135,8 @@
     "                 'plot_datapoints':True,\n",
     "                 'plot_density':False,\n",
     "                 'plot_contours':False,\n",
-    "                 'fill_contours':False,}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "                 'fill_contours':True,}\n",
+    "\n",
     "fig = corner(ch_dict['DE421'], color='C0', **corner_kwargs);\n",
     "#corner(ch_dict['DE430'], color='C1', fig=fig);\n",
     "#corner(ch_dict['DE435'], color='C2', fig=fig);\n",
@@ -158,13 +146,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ax = []\n",
-    "fig = plt.figure(figsize=(16,8))\n",
+    "fig = plt.figure(figsize=(20,12))\n",
     "\n",
     "for pp, par in enumerate(params):\n",
     "    ax.append(fig.add_subplot(2,3,pp+1))\n",
@@ -172,24 +158,24 @@
     "        ax[pp].hist(ch_dict[eph][:,pp], 30, normed=True, histtype='step', label=eph)\n",
     "    ax[pp].set_xlabel(par)\n",
     "\n",
-    "ax[0].legend(loc='upper left')"
+    "ax[0].legend(loc='upper left')\n",
+    "ax[3].set_yscale('log')\n",
+    "ax[4].set_yscale('log')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "corner_kwargs = {'bins':30,\n",
     "                 'labels':params,\n",
     "                 'smooth':1.0,\n",
-    "                 'plot_datapoints':False,\n",
-    "                 'plot_density':True,\n",
+    "                 'plot_datapoints':True,\n",
+    "                 'plot_density':False,\n",
     "                 'plot_contours':False,\n",
-    "                 'fill_contours':False,}\n",
+    "                 'fill_contours':True,}\n",
     "\n",
     "corner(ch_dict['BayesEphem'], **corner_kwargs);"
    ]
@@ -197,17 +183,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ax = []\n",
+    "colors = ['C0', 'C1', 'C2', 'C3', 'k']\n",
+    "runs = ['DE421', 'DE430', 'DE435', 'DE436', 'BayesEphem']\n",
+    "fig = plt.figure(figsize=(20,12))\n",
+    "\n",
+    "for pp, par in enumerate(params):\n",
+    "    ax.append(fig.add_subplot(2,3,pp+1))\n",
+    "    for eph,col in zip(runs, colors):\n",
+    "        ax[pp].hist(ch_dict[eph][:,pp], 30, normed=True, histtype='step', label=eph, color=col)\n",
+    "    ax[pp].set_xlabel(par)\n",
+    "\n",
+    "\n",
+    "ax[0].legend(loc='upper left')\n",
+    "ax[3].set_yscale('log')\n",
+    "ax[4].set_yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if analysis == \"UL\":\n",
+    "    for run in runs:\n",
+    "        UL, dUL = UL_uncert(ch_dict[run][:,-2])\n",
+    "        print(\"{}: {:.2e} +/- {:.2e}\".format(run, UL, dUL))"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -221,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
